@@ -1517,14 +1517,14 @@
         <jdk>17</jdk>
       </activation>
       <properties>
-        <testAdditionalRuntimeArgLine>--illegal-access=warn --add-exports	java.base/sun.nio.ch=ALL-UNNAMED
+        <testAdditionalRuntimeArgLine>--add-exports	java.base/sun.nio.ch=ALL-UNNAMED
         			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
         			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist
         			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
 					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist
 					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
-        <jdk.src.version>17</jdk.src.version>
-        <jdk.target.version>17</jdk.target.version>
+        <jdk.src.version>11</jdk.src.version>
+        <jdk.target.version>16</jdk.target.version>
         <!-- No Java 17 support yet for forbiddenapis.skip -->
         <forbiddenapis.skip>true</forbiddenapis.skip>
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
@@ -1663,7 +1663,7 @@
     <profile>
       <id>all-modules</id>
       <activation>
-        <jdk>[11,13)</jdk>
+        <jdk>[11,18)</jdk>
       </activation>
       <modules>
         <module>../testfoundation</module>
